crates/harness-testkit/tests/snapshots/pty_e2e__native_tool_parity_dense.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 1559
expression: "checkpoint_visual_snapshot(&screen,\n&[\"Compat alias · webfetch → web.fetch\",\n\"artifacts/toolcalls/tc-fetch/web.fetch.pdf\", \"cargo test -p harness-tui\",\n\"14:37\", REPLAY_DENSE_READY_MARKER,], &parity_visual,)"
---
Compat alias · webfetch → web.fetch: true
artifacts/toolcalls/tc-fetch/web.fetch.pdf: true
cargo test -p harness-tui: true
14:37: true
Replay · read-only: true
focus_marker: Compat alias · webfetch → web.fetch
focus_pixels_blake3: e3cdbe3b9875ac6fd697d5acbec5a0fd816a3d8582c7b22114f84712df8408c8
focus_region_cells: row=2, col=6, height=6, width=30
image: pty_native_tool_parity_dense.png
manifest_json: pty-manifests/transcript_shell/manifest.json
manifest_jsonl: pty-manifests/transcript_shell/manifest.jsonl
size_px: 960x540
