crates/harness-testkit/tests/snapshots/pty_e2e__native_tool_parity_fetch_row.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&screen,\n&[\"Fetch https://example.test/report.pdf · 14:37 · 2.4s\",\n\"Attachment · artifacts/toolcalls/tc-fetch/web.fetch.pdf · digest-fetch-artifact\",\n\"exit code: 1\", \"stderr: snapshot mismatch\",], &fetch_visual,)"
---
Fetch https://example.test/report.pdf · 14:37 · 2.4s: true
Attachment · artifacts/toolcalls/tc-fetch/web.fetch.pdf · digest-fetch-artifact: true
exit code: 1: true
stderr: snapshot mismatch: true
focus_marker: Fetch https://example.test/report.pdf
focus_render_state_blake3: ea1511514f433d1c6b0d55f49e704c63865b92e55124322ba81fbb07ac501d81
focus_region_cells: row=20, col=9, height=7, width=42
image: pty_native_tool_parity_fetch_row.png
manifest_json: pty-manifests/transcript_shell/manifest.json
manifest_jsonl: pty-manifests/transcript_shell/manifest.jsonl
size_px: 2560x1440
