crates/harness-testkit/tests/snapshots/pty_e2e__native_tool_parity_mcp_background.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&screen,\n&[\"docs-rs_search_in_crate Layout [crate_name=ratatui]\",\nREPLAY_DENSE_READY_MARKER,], &mcp_visual,)"
---
docs-rs_search_in_crate Layout [crate_name=ratatui]: true
Replay · read-only: true
focus_marker: docs-rs_search_in_crate Layout [crate_name=ratatui]
focus_render_state_blake3: f4b1592c2ee2e6ceb604aeb3f791249cadff5fc5270c284bcff4da0b17c4cdf7
focus_region_cells: row=12, col=7, height=6, width=44
image: pty_native_tool_parity_mcp_background.png
manifest_json: pty-manifests/transcript_shell/manifest.json
manifest_jsonl: pty-manifests/transcript_shell/manifest.jsonl
size_px: 2560x1440
