crates/harness-testkit/tests/snapshots/pty_e2e__native_tool_parity_task_row.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&screen,\n&[\"Bring native tool parity inline\",\n\"Read src/ui.rs [offset=12, limit=24] · 14:35 · 1.2s\",\n\"Spawn researcher · audit transcript parity\", \"14:36 · 1.6s\",\n\"foreground · agent_worker · req_child · completed · 3 child tool calls\",],\n&task_visual,)"
---
Bring native tool parity inline: true
Read src/ui.rs [offset=12, limit=24] · 14:35 · 1.2s: true
Spawn researcher · audit transcript parity: true
14:36 · 1.6s: true
foreground · agent_worker · req_child · completed · 3 child tool calls: true
focus_marker: Spawn researcher
focus_render_state_blake3: ab76fc830752daf85e79bf68d12dcde5583eb6f59b2e79297f796fdac8107d01
focus_region_cells: row=15, col=11, height=6, width=34
image: pty_native_tool_parity_task_row.png
manifest_json: pty-manifests/transcript_shell/manifest.json
manifest_jsonl: pty-manifests/transcript_shell/manifest.jsonl
size_px: 2560x1440
