crates/harness-testkit/tests/snapshots/pty_e2e__native_tool_parity_thinking.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 865
expression: "checkpoint_visual_snapshot(&screen,\n&[\"Thinking: Drafting the inline parity pass.\",\n\"Inline transcript parity is easier to scan now.\",\n\"Bring native tool parity inline\", REPLAY_DENSE_READY_MARKER,],\n&thinking_visual,)"
---
Thinking: Drafting the inline parity pass.: true
Inline transcript parity is easier to scan now.: true
Bring native tool parity inline: true
Replay · read-only: true
focus_marker: Thinking: Drafting the inline parity pass.
focus_render_state_blake3: 402e7f069fb6e36a1bf5216e6cb86491b0154189fc0c65ef1e8d25535f24d774
focus_region_cells: row=6, col=5, height=5, width=40
image: pty_native_tool_parity_thinking.png
manifest_json: pty-manifests/transcript_shell/manifest.json
manifest_jsonl: pty-manifests/transcript_shell/manifest.jsonl
size_px: 2560x1440
