crates/harness-testkit/tests/snapshots/pty_e2e__pty_continue_details_split_tall.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&details_screen,\n&[\"Request ID:\", \"Provider:\", \"Model:\", \"Prompt summary:\",\n\"historical question\",], &details_visual,)"
---
Request ID:: true
Provider:: true
Model:: true
Prompt summary:: true
historical question: true
focus_marker: Request ID:
focus_pixels_blake3: 0c65d7084d6fc506a0bf8874eb974cf3d2591f0646270df30c9224a673b820e2
focus_region_cells: row=37, col=2, height=6, width=24
image: pty_continue_details_split_tall.png
size_px: 1280x1440
