crates/harness-testkit/tests/snapshots/pty_e2e__pty_continue_details_split_tier.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&details_screen,\n&[\"Request ID:\", \"Provider:\", \"Model:\", \"Prompt summary:\",\n\"historical question\",], &details_visual,)"
---
Request ID:: true
Provider:: true
Model:: true
Prompt summary:: true
historical question: true
focus_marker: Request ID:
focus_pixels_blake3: 6895d16a48c2939ab32c76477ef7fe37dec395ee2c290eb68c2daab4b54c676d
focus_region_cells: row=12, col=64, height=6, width=24
image: pty_continue_details_split_tier.png
size_px: 1536x1200
