crates/harness-testkit/tests/snapshots/pty_e2e__pty_continue_live_details_primary.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&details_screen,\n&[\"Request ID:\", \"Provider:\", \"Model:\", \"Prompt summary:\",\n\"historical question\",], &details_visual,)"
---
Request ID:: true
Provider:: true
Model:: true
Prompt summary:: true
historical question: true
focus_marker: Request ID:
focus_pixels_blake3: 7391392bd238eed24e06830e3af19456ae3ca87f99e4d12bbb6cb9c99c3df52c
focus_region_cells: row=12, col=119, height=6, width=28
image: pty_continue_live_details_primary.png
size_px: 2560x1440
